# placename-extractor

./: LLM.py  README.md  epub_reader.py  main.py  pyproject.toml  requirements.txt  utils.py
reader/: epub_reader.py  pdf_reader.py
